--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ For more information, check out the page on our <a href="https://www.borealisai.
         <div class="row">
           <!-- Section pour l'abréviation de la conférence -->
           <div class="col-sm-2 abbr">
-            <abbr class="badge">[ABRÉVIATION]</abbr> <!-- Remplacez [ABRÉVIATION] par le nom de la conférence, ex. "ACL" -->
+            <abbr class="badge">ART</abbr> <!-- Remplacez [ABRÉVIATION] par le nom de la conférence, ex. "ACL" -->
           </div>
     
           <!-- Section pour les détails de la publication -->
