--- a/publications/index.html
+++ b/publications/index.html
@@ -174,7 +174,7 @@
       <div class="row">
         <!-- Section pour l'abréviation de la conférence -->
         <div class="col-sm-2 abbr">
-          <abbr class="badge">[ABRÉVIATION]</abbr> <!-- Remplacez [ABRÉVIATION] par le nom de la conférence, ex. "ACL" -->
+          <abbr class="badge">ART</abbr> <!-- Remplacez [ABRÉVIATION] par le nom de la conférence, ex. "ACL" -->
         </div>
   
         <!-- Section pour les détails de la publication -->
