--- a/teaching/index.html
+++ b/teaching/index.html
@@ -157,17 +157,14 @@
 
   <article>
     <ul>
-  <li>Course I taught:
+  <li>Courses I taught:
     <ul>
-      <li><a href="http://www.cs.toronto.edu/~caoy/teaching/C11">CSCC11: Introduction to Machine Learning and Data Mining (Fall 2016)</a></li>
-    </ul>
-  </li>
-  <li>Courses I TA’ed:
-    <ul>
-      <li><a href="http://www.cs.toronto.edu/~kyros/courses/2503/">CSC2503: Foundations of Computer Vision (Fall 2014)</a></li>
-      <li><a href="http://www.cs.toronto.edu/~mbrubake/teaching/C11-Fall2013/">CSCC11: Introduction to Machine Learning and Data Mining (Fall 2013)</a></li>
-      <li><a href="http://www.cdf.toronto.edu/~csc108h/fall/">CSC108 Introduction to Computer Programming (Fall 2013)</a></li>
-      <li>CSC148, CSC104 (2010-2012)</li>
+      <li><a>Statistiques et Informatique L3</a></li>
+      <li><a>Statistiques et Informatique L2</a></li>
+      <li><a>Statistiques et Informatique L1</a></li>
+      <li><a>Introduction à la Sociologie Française L2</a></li>
+      <li><a>Introduction à la Sociologie Américaine L1</a></li>
+      <li><a>Sociologie des Inégalités</a></li>
     </ul>
   </li>
 </ul>
