--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     
 
     <div class="clearfix">
-      <p>I am a postdoctoral researcher at the Laboratory for Agent-Based Social Simulation in Rome https://labss.istc.cnr.it</p>
+      <p>I am a postdoctoral researcher at the Laboratory for Agent-Based Social Simulation in Rome <ahref="https://labss.istc.cnr.it"></ahref> Previously I was a Max Weber Fellow at the European University Institute and received my PhD in sociology from Sorbonne University and the University of Trento</p>
 
     </div>
 
