--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
         <!-- Social Icons -->
         <div class="row ml-1 ml-sm-0">
           <span class="contact-icon text-center">
-  <a href="mailto:%63%61%6F%79@%63%73.%74%6F%72%6F%6E%74%6F.%65%64%75"><i class="fas fa-envelope"></i></a>
+  <a href="lucas.sage2@gmail.com"><i class="fas fa-envelope"></i></a>
   
-  <a href="https://scholar.google.com/citations?user=RTVRTSsAAAAJ&hl" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
+  <a href="https://scholar.google.com/citations?user=VcIvhZ0AAAAJ&hl=fr&oi=ao" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
   
   
-  <a href="https://github.com/yanshuaicao" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-  <a href="https://www.linkedin.com/in/yanshuai-cao" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-  <a href="https://twitter.com/yanshuaicao" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
+  <a href="https://github.com/Lsage" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+  <a href="https://www.linkedin.com/feed/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+  <a href="https://x.com/Lucas_sage1" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
   
   
   
