--- a/teaching/index.html
+++ b/teaching/index.html
@@ -6,9 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<title>Yanshuai  Cao | teaching</title>
-<meta name="description" content="Yanshuai Cao's Academic Site; 曹颜帅个人学术网站; machine learning, computer vision, natural language processing, deep learning; 机器学习, 计算机视觉, 自然语言处理, 深度学习.
-">
+<title>Lucas  Sage | teaching</title>
+<meta name="description" content="Lucas Sage's Academic Site; Analytical Sociology; Agent-Based Models">
 
 <!-- Open Graph -->
 
@@ -65,7 +64,7 @@
     <nav id="navbar" class="navbar navbar-light navbar-expand-sm fixed-top">
     <div class="container">
       
-      <a class="navbar-brand title font-weight-lighter" href="https://yanshuaicao.github.io//">
+      <a class="navbar-brand title font-weight-lighter" href="https://Lsage.github.io/">
        <span class="font-weight-bold">Yanshuai</span>   Cao
       </a>
       
