--- a/teaching/index.html
+++ b/teaching/index.html
@@ -89,8 +89,8 @@
           
           <!-- Blog -->
           <li class="nav-item ">
-            <a class="nav-link" href="/blog/">
-              blog
+            <a class="nav-link" href="/project/">
+              project
               
             </a>
           </li>
