--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ For more information, check out the page on our <a href="https://www.borealisai.
      <!-- --> -->
       <div class="publications">
   <h2>Selected Publications:</h2>
-  <p>* denotes equal contribution</p>
+  <!-- <p>* denotes equal contribution</p> -->
   <ol class="bibliography"><li><div class="card">
   <div class="card-body">
 
@@ -471,8 +471,8 @@ For more information, check out the page on our <a href="https://www.borealisai.
   <a href="https://scholar.google.com/citations?user=VcIvhZ0AAAAJ&hl=fr&oi=ao" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
   
   
-  <a href="https://github.com/yanshuaicao" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-  <a href="https://github.com/Lsage/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+  <a href="https://github.com/Lsage/" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+  <a href="https://www.linkedin.com/in/lucas-sage-a60aa2119/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
   <a href="https://x.com/Lucas_sage1" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
   
   
