--- a/teaching/index.html
+++ b/teaching/index.html
@@ -65,7 +65,7 @@
     <div class="container">
       
       <a class="navbar-brand title font-weight-lighter" href="https://Lsage.github.io/">
-       <span class="font-weight-bold">Yanshuai</span>   Cao
+       <span class="font-weight-bold">Lucas</span>   Sage
       </a>
       
       <!-- Navbar Toogle -->
