--- a/project/<!DOCTYPE html>.html
+++ b/project/<!DOCTYPE html>.html
@@ -29,7 +29,7 @@
 <link rel="shortcut icon" href="/assets/img/favicon.ico">
 <link rel="stylesheet" href="/assets/css/main.css">
 
-<!-- <link rel="canonical" href="/blog/2021/why-is-text-to-sql-hard/"> -->
+<link rel="canonical" href="/blog/2021/why-is-text-to-sql-hard/">
 
 <!-- Theming-->
 
@@ -65,8 +65,8 @@
     <nav id="navbar" class="navbar navbar-light navbar-expand-sm fixed-top">
     <div class="container">
       
-      <a class="navbar-brand title font-weight-lighter" href="https://yanshuaicao.github.io//">
-       <span class="font-weight-bold">Yanshuai</span>   Cao
+      <a class="navbar-brand title font-weight-lighter" href="https://Lsage.github.io//">
+       <span class="font-weight-bold">Lucas</span>   Sage
       </a>
       
       <!-- Navbar Toogle -->
