--- a/publications/index.html
+++ b/publications/index.html
@@ -146,6 +146,8 @@
         <div class="row">
           <div class="col-sm-2 abbr">
           </div>
+            <div class="card-body">
+              <div class="row">
                 <!-- Section pour l'abréviation de la conférence -->
                 <div class="col-sm-2 abbr">
                   <abbr class="badge">ART</abbr> <!-- Remplacez [ABRÉVIATION] par le nom de la conférence, ex. "ACL" -->
