--- a/index.html
+++ b/index.html
@@ -177,6 +177,20 @@
     <div class="table-responsive">
       <table class="table table-sm table-borderless">
         <tr>
+          <th scope="row">Dec 21, 2024</th>
+          <td>
+            I will be presenting my work on the diffusion of innovativeness at the first Italian conference on computational social science.
+            <a href="https://cs2italy.org">Here is the program.</a>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">Dec 21, 2024</th>
+          <td>
+            There are several definitions of causality and mechanisms in the philosophy of science and this is relevant for empirical research. We discuss this in this short piece with Gianluca Manzo.
+            <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/9781118445112.stat08510">You can find the paper here.</a>
+          </td>
+        </tr>
+        <tr>
           <th scope="row">Dec 11, 2024</th>
           <td>
             I will be co-organizing and presenting my work at the second edition of the symposium on Empirically-Calibrated Agent-Based Models at IAST in Toulouse. 
