--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
     <div class="table-responsive">
       <table class="table table-sm table-borderless">
         <tr>
-          <th scope="row">Dec 21, 2024</th>
+          <th scope="row">Jan 6, 2024</th>
           <td>
-            I will be presenting my work on the diffusion of innovativeness at the first Italian conference on computational social science.
+            I will be presenting my work on the diffusion of innovativeness at the first Italian conference on computational social science on Jan. 16th.
             <a href="https://cs2italy.org">Here is the program.</a>
           </td>
         </tr>
