--- a/teaching/index.html
+++ b/teaching/index.html
@@ -2,6 +2,7 @@
 <html>
 
   <head>
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="5a769aae-53a4-42da-a2af-f579832b0b40" type="text/javascript" async></script>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-83TT9T66SW"></script>
 <script>
