--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <div class="table-responsive">
       <table class="table table-sm table-borderless">
         <tr>
-          <th scope="row">Jan 12, 2025</th>
+          <th scope="row">Mar 12, 2025</th>
           <td>
             I will present for the first time my new paper "Starting low to finish high? Reassessing wage growth trajectories in
             early career." at the RC28 spring meeting in Milan on the 26th of March
@@ -434,7 +434,7 @@
   
   <a href="https://github.com/Lsage/" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
   <a href="https://www.linkedin.com/in/lucas-sage-a60aa2119/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-  <a href="@l-sage.bsky.social" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
+  <a href="https://bsky.app/profile/l-sage.bsky.social" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
   
   
   
