--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   
   <a href="https://github.com/Lsage" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
   <a href="https://www.linkedin.com/feed/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-  <a href="https://x.com/Lucas_sage1" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
+  <a href="https://bsky.app/profile/l-sage.bsky.social" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
   
   
   
@@ -177,7 +177,7 @@
     
 
     <div class="clearfix">
-      <p>I am a postdoctoral researcher at the Laboratory for Agent-Based Social Simulation <a href="https://labss.istc.cnr.it">LABSS</a> in Rome. Previously, I was a Max Weber Fellow at the European University Institute and received my PhD in sociology from Sorbonne University and the University of Trento. Most of my work deals with social inequality broadly conceived, but I am interested in a wide variety of topics like school segregation, social networks, epistemology of the social sciences.</p>
+      <p>I am a postdoctoral researcher at the Laboratory for Agent-Based Social Simulation <a href="https://labss.istc.cnr.it">LABSS</a> in Rome. Previously, I was a Max Weber Fellow at the European University Institute and received my PhD in sociology from Sorbonne University and the University of Trento. Most of my work deals with social inequality broadly conceived, but I am interested in a wide variety of topics including school segregation, social networks, epistemology of the social sciences.</p>
     </div>
 
     
