--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
     
 
     <div class="clearfix">
-      <p>I am a postdoctoral researcher at the Laboratory for Agent-Based Social Simulation <a href="https://labss.istc.cnr.it">LABSS</a> in Rome. Previously, I was a Max Weber Fellow at the European University Institute and received my PhD in sociology from Sorbonne University and the University of Trento. Most of my work deals with social inequality broadly conceived, but I am interested in a wide variety of topics including school segregation, social networks, epistemology of the social sciences.</p>
+      <p>Welcome to my website. I am a postdoctoral researcher at the Laboratory for Agent-Based Social Simulation <a href="https://labss.istc.cnr.it">LABSS</a> in Rome. Next academic year I will start as a research fellow at the Institute for Advanced Study in Toulouse (<a href="https://www.iast.fr/">IAST)</a>). Previously, I was a Max Weber Fellow at the European University Institute and received my PhD in sociology from Sorbonne University and the University of Trento. 
+        I am a sociologist with a background in economics. Most of my work deals with social inequality broadly conceived, but I am interested in a wide variety of topics including school segregation, social networks, epistemology of the social sciences. </p>
     </div>
 
     
@@ -186,6 +187,20 @@
   
     <div class="table-responsive">
       <table class="table table-sm table-borderless">
+        <tr>
+          <th scope="row">Mar 12, 2025</th>
+          <td>
+            Publication alert: our paper with Alexandros Gelastopoulos and Arnout van de Rijt is out in PNAS! Read it in OA 
+            <a href="https://www.pnas.org/doi/10.1073/pnas.2408163122">here.</a>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">Apr 12, 2025</th>
+          <td>
+            I will present my new paper "Starting low to finish high? Reassessing wage growth trajectories in
+            early career" at CLIC-EUI on June the 5th.
+          </td>
+        </tr>
         <tr>
           <th scope="row">Mar 12, 2025</th>
           <td>
