--- a/teaching/index.html
+++ b/teaching/index.html
@@ -166,7 +166,18 @@
 
   <article>
     <ul>
-  <li>Courses I taught:
+      <li>University Mohammed VI Polytechnic - Rabat (Fall 2025):</li>
+    <ul>
+      <li><a>Introduction to Computational Social Science</a></li>
+    </ul>
+  </li>
+    <ul>
+      <li>Courses I taught at Sorbonne Université Abu-Dhabi(2022-2025):</li>
+    <ul>
+      <li><a>Introduction to Statistics</a></li>
+    </ul>
+  </li>
+  <li>Courses I taught at Sorbonne Université (2017-2022):</li>
     <ul>
       <li><a>Statistiques et Informatique L3</a></li>
       <li><a>Statistiques et Informatique L2</a></li>
