--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
           <div class="table-responsive">
             <table class="table table-sm table-borderless">
               <tr>
+                <th scope="row">Oct 1, 2025</th>
+                <td>On Dec 18 I will intervene in the UNED Inequality and Social Demography Series in Madrid along with an <a href="https://bsky.app/profile/fabriberna.bsky.social/post/3m32ntew7sk25">impressive lineup of speakers.</a><. I am very happy and looking forward to meet and discuss with colleagues.</a></td>
+              </tr>
+              <tr>
                 <th scope="row">Jun 11, 2025</th>
                 <td>Publication alert: our paper with Alexandros Gelastopoulos and Arnout van de Rijt is out in PNAS! Read it in OA <a href="https://www.pnas.org/doi/10.1073/pnas.2408163122">here.</a></td>
               </tr>
