--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <article>
         <!-- Profile Picture -->
         <div class="profile float-right">
-          <img class="img-fluid z-depth-1 rounded" src="/assets/img/prof_pic_2.jpeg" alt="Lucas Sage">
+          <img class="img-fluid z-depth-1 rounded" src="/assets/img/prof_pic_3.jpeg" alt="Lucas Sage">
         </div>
 
         <!-- About Section -->
@@ -116,7 +116,7 @@
             <table class="table table-sm table-borderless">
               <tr>
                 <th scope="row">Oct 1, 2025</th>
-                <td>On Dec 18 I will intervene in the UNED Inequality and Social Demography Series in Madrid along with an <a href="https://bsky.app/profile/fabriberna.bsky.social/post/3m32ntew7sk25">impressive lineup of speakers.</a><. I am very happy and looking forward to meet and discuss with colleagues.</a></td>
+                <td>On Dec 18 I will intervene in the UNED Inequality and Social Demography Series in Madrid along with an <a href="https://bsky.app/profile/fabriberna.bsky.social/post/3m32ntew7sk25">impressive lineup of speakers.</a>. I feel very honnored and looking forward to meet and discuss with colleagues.</a></td>
               </tr>
               <tr>
                 <th scope="row">Jun 11, 2025</th>
