--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <article>
         <!-- Profile Picture -->
         <div class="profile float-right">
-          <img class="img-fluid z-depth-1 rounded" src="/assets/img/prof_pic_3.jpeg" alt="Lucas Sage">
+          <img class="img-fluid z-depth-1 rounded" src="/Users/lsage/Documents/Lsage.github.io/assets/img/prof_pic_3.jpg" alt="Lucas Sage">
         </div>
 
         <!-- About Section -->
