--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
       <article>
         <!-- Profile Picture -->
-        <div class="profile float-right">
+        <div class="profile text-center mx-auto mb-4" style="max-width: 400px;">
           <img class="img-fluid z-depth-1 rounded" src="/assets/img/prof_pic_3.jpg" alt="Lucas Sage">
         </div>
 
