--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
           <div class="table-responsive">
             <table class="table table-sm table-borderless">
               <tr>
+                <th scope="row">Nov 10, 2025</th>
+                <td>My chapter "Formal models in Raymond Boudon's work" is out and in open access. You can download the whole book or chapter by chapter <a href="https://sup.sorbonne-universite.fr/catalogue/philosophie-et-sciences-sociales/lintelligence-du-social/boudon-reexamined">here.</a></a></td>
+              </tr>
+              <tr>
+              <tr>
                 <th scope="row">Oct 1, 2025</th>
                 <td>On Dec 18 I will intervene in the UNED Inequality and Social Demography Series in Madrid along with an <a href="https://bsky.app/profile/fabriberna.bsky.social/post/3m32ntew7sk25">impressive lineup of speakers.</a>. I feel very honnored and looking forward to meet and discuss with colleagues.</a></td>
               </tr>
