--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <table class="table table-sm table-borderless">
               <tr>
                 <th scope="row">Nov 10, 2025</th>
-                <td>My chapter "Formal models in Raymond Boudon's work" is out and in open access. You can download the whole book or chapter by chapter <a href="https://sup.sorbonne-universite.fr/catalogue/philosophie-et-sciences-sociales/lintelligence-du-social/boudon-reexamined">here.</a></a></td>
+                <td>My chapter "Formal models in Raymond Boudon's work" is out in open access. You can download the whole book or single chapters <a href="https://sup.sorbonne-universite.fr/catalogue/philosophie-et-sciences-sociales/lintelligence-du-social/boudon-reexamined">here.</a></a></td>
               </tr>
               <tr>
               <tr>
