--- a/publications/index.html
+++ b/publications/index.html
@@ -89,6 +89,31 @@
         <div class="publications">
           <ol class="bibliography">
 
+            <!-- Publication 0 -->
+            <li>
+              <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-sm-2 abbr">
+                      <abbr class="badge">PNAS</abbr>
+                    </div>
+                    <div class="col-sm-8">
+                      <div class="title">Formal models in Raymond Boudon's work</div>
+                      <div class="author">Lucas Sage</div>
+                      <div class="periodical"><em>Sorbonne University Press</em> 2025</div>
+                      <div class="links">
+                        <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
+                        <a href="https://sup.sorbonne-universite.fr/catalogue/philosophie-et-sciences-sociales/lintelligence-du-social/boudon-reexamined" class="btn btn-sm z-depth-0" role="button" target="_blank">HTML</a>
+                      </div>
+                      <div class="abstract hidden">
+                        <p>This chapter originated from a symposium held at Sorbonne University in June 2024, which brought together many scholars to reassess Raymond Boudon's contributions to contemporary sociology. My contribution examines Boudon's use of formal models—an often overlooked yet pioneering aspect of his work. I analyze three modeling approaches Boudon employed throughout his career: a computer simulation of judicial decision-making (1964), numerical simulations exploring educational inequality and social mobility (1974), and a game-theoretic model of relative frustration (1977). The chapter identifies key strengths of Boudon's approach: his pragmatic selection of modeling techniques suited to puzzling research questions, his use of models as counterfactual tools, and his insistence on grounding formal models in expert knowledge and plausible behavioral assumptions. I also explore some intriguing gaps in Boudon's modeling trajectory. Firstly, despite being an early advocate for the potential of computer simulations, he progressively got away from them. Secondly, his models focused primarily on global interdependencies rather than the local social networks that increasingly interest contemporary sociologists. The chapter suggests how current modeling approaches might build on Boudon's insights while addressing these unexplored dimensions.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+
             <!-- Publication 1 -->
             <li>
               <div class="card">
