--- a/publications/index.html
+++ b/publications/index.html
@@ -95,7 +95,7 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col-sm-2 abbr">
-                      <abbr class="badge">PNAS</abbr>
+                      <abbr class="badge">SUP</abbr>
                     </div>
                     <div class="col-sm-8">
                       <div class="title">Formal models in Raymond Boudon's work</div>
