--- a/projects/index.html
+++ b/projects/index.html
@@ -96,7 +96,7 @@
               <div class="card">
                 <div class="card-body">
                   <div class="title">Inequality and climate change</div>
-                  <p>In this new project at LABSS, we explore the relationships between inequality and CO2 emissions. Counterintuitively, inequality can have beneficial impact in fighting climate change which suggests that reducing simultaneously inequality and CO2 emissions may turn out to be difficult. We analyze the conditions under which this is possible. [More to come]</p>
+                  <p>In this project together with colleagues at <a href=https://labss.istc.cnr.it>LABSS</a>, we explore the relationships between inequality and CO2 emissions. Counterintuitively, inequality can have beneficial impact in fighting climate change which suggests that reducing simultaneously inequality and CO2 emissions may turn out to be difficult. We analyze the conditions under which this is possible. [More to come]</p>
                   <!--<a href="/projects/project3.html" class="btn btn-sm z-depth-0" role="button" target="_blank">Read More</a>-->
                 </div>
               </div>
