--- a/projects/index.html
+++ b/projects/index.html
@@ -16,7 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>Lucas Sage | Projects</title>
+  <title>Lucas Sage | projects</title>
   <meta name="description" content="Lucas Sage's Academic Site; Analytical Sociology, Agent-Based Models">
 
   <!-- Open Graph -->
